# stl-inspector-cli

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
sample_reports/: bench_mechanism_v3_base.json  bench_mechanism_v3_carriage.json  bench_mechanism_v3_m3_test_block.json
src/stl_inspector/: __init__.py  cli.py  parser.py
tests/: test_parser.py
